# cleverest_debugger

./: .gitignore  LICENSE.txt  README.md  setup.cfg  setup.py
clevdebug/: __init__.py  clevdebug.py
cleverest_debugger/: __init__.py
tests/: test.py  tests.py
