[metadata]
name = clevdebug
version = 0.0.1
author = Bauyrzhan Ospan, CEO "Cleverest Technologies LLP"
author_email = main@cleverest.tech
description = Debugger as decorator for functions and methods
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bauyrzhanospan/cleverest_debugger
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src